# assumption

./: .autotools  .build-with-cmake.sh  .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  CMakeSettings.json  COPYING  Doxyfile  LICENSE  Makefile.am  Makfile.am  NEWS  README  README.md  assumption.sln  build.sh  configure.ac  configure.in  pom.xml  readme
cpp/: .gitignore  CMakeLists.txt  Makfile.am  assumption.cpp  assumption.h  assumption.props  assumption.vcxproj  assumption.vcxproj.filters  boost_test.cpp  build-cmake.sh  packages.config  readme  test.cpp
cpp/include/: assumption.h  interfaces.h
cpp/include/gos/: assumption.h
cpp/include/gos/assumption/: boost.h
cpp/src/: CMakeLists.txt  assumption.cpp
cpp/tests/: .gitignore  CMakeLists.txt  boost.cpp  general.cpp  test.cpp
docs/: .gitignore  Doxyfile
java/: .gitignore  pom.xml
java/assumption/: pom.xml
java/assumption/src/main/java/gos/assumption/: Group.java  GroupA.java  GroupB.java  Item.java  ItemA.java  ItemB.java  Serialization.java  Type.java
java/assumption/src/test/java/gos/assumption/: SerializationTest.java
m4/: acx_pthread.m4
scripts/: .build-with-autotools.sh  .build-with-cmake.sh
