#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([assumption], [0.0.1], [orri@icesoft.is])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([cpp/src/assumption.cpp])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT
